New update elastic Search with Highlight feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.password=
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 server.servlet.context-path=/SecondProject
+logging.level.org.springframework.data.elasticsearch=debug
+#logging.level.org.springframework.data.elasticsearch.client.reactive=debug
+#logging.level.org.springframework.data.elasticsearch.core.client.support=debug
+#logging.level.org.springframework.data.elasticsearch.annotations=debug
