--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
    tools {
       // Install the Maven version configured as "maven" and add it to the path.
       maven "maven"
-      java "java"
+      jdk "java"
    }
 
    stages {
